# zephyr-applications

./: .clang-format  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  poe.toml  pyproject.toml  west.yml
.github/workflows/: build.yml
.west/: config
applications/bluetooth_proxy_device/: .env  CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sysbuild.conf
applications/bluetooth_proxy_device/boards/: nrf5340dk_nrf5340_cpuapp.overlay
applications/bluetooth_proxy_device/keys/: generate_keys.txt
applications/bluetooth_proxy_device/src/: ble_module.c  ble_module.h  hw_module.c  hw_module.h  main.c
applications/bluetooth_proxy_device/sysbuild/: mcuboot.conf
applications/embedded_vision/: CMakeLists.txt  Kconfig  README.md  prj.conf
applications/embedded_vision/boards/: arduino_nicla_vision_stm32h747xx_m7.conf  arduino_nicla_vision_stm32h747xx_m7.overlay
applications/embedded_vision/src/: main.c  usb.c  usb.h
applications/force_sensor/: CMakeLists.txt  Kconfig  README.md  prj.conf  sysbuild.conf
applications/force_sensor/boards/: adafruit_qt_py_esp32c3.conf  adafruit_qt_py_esp32c3.overlay
applications/force_sensor/src/: main.c  shell.c  wifi.c
applications/joystick_controller/: CMakeLists.txt  Kconfig  README.md  debug.conf  prj.conf  sample.yaml
applications/joystick_controller/boards/: adafruit_qt_py_esp32s3_esp32s3_procpu.conf  adafruit_qt_py_esp32s3_esp32s3_procpu.overlay
applications/joystick_controller/src/: main.c
applications/joystick_controller/src/common/: CMakeLists.txt  message_channel.c  message_channel.h
applications/joystick_controller/src/modules/button/: CMakeLists.txt  Kconfig.button  button.c
applications/joystick_controller/src/modules/led/: CMakeLists.txt  Kconfig.led  led.c
applications/joystick_controller/sysbuild/mcuboot/: prj.conf
applications/motor_controller/: CMakeLists.txt  README.md  prj.conf  sample.yaml
applications/motor_controller/boards/: arduino_mkrzero.overlay  robotis_openrb_150.overlay
applications/motor_controller/src/: main.c  usb.c
applications/pico_fw/: CMakeLists.txt  Kconfig  README.md  debug.conf  prj.conf  sample.yaml  west.yml
applications/pico_fw/boards/: rpi_pico_w.overlay
applications/pico_fw/src/: main.c  wifi.c
applications/rasprover/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  debug.conf  prj.conf  sample.yaml
applications/rasprover/boards/: native_sim_native_64.conf  native_sim_native_64.overlay  ros_driver_esp32_procpu.overlay
applications/rasprover/src/: app_display.c  app_display.h  app_gimbal.c  app_gimbal.h  app_motors.c  app_motors.h  app_network.c  app_network.h  app_ros_cdr.c  app_ros_cdr.h  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  app_time.c  app_time.h  app_zenoh.c  app_zenoh.h  main.c  main.h
applications/rasprover/sysbuild/: mcuboot.conf
boards/adafruit/qt_py_esp32c3/: Kconfig  Kconfig.adafruit_qt_py_esp32c3  adafruit_qt_py_esp32c3-pinctrl.dtsi  adafruit_qt_py_esp32c3.dts  adafruit_qt_py_esp32c3.yaml  board.yml  seeed_xiao_connector.dtsi
boards/adafruit/qt_py_esp32c3/doc/: index.rst
boards/robotis/openrb_150/: Kconfig.robotis_openrb_150  arduino_mkr_connector.dtsi  board.cmake  board.yml  pre_dt_board.cmake  robotis_openrb_150-pinctrl.dtsi  robotis_openrb_150.dts  robotis_openrb_150.yaml  robotis_openrb_150_defconfig
boards/robotis/openrb_150/doc/: index.rst
boards/robotis/openrb_150/support /: openocd.cfg
docs/superpowers/plans/: 2026-05-08-actuator-subsystem.md  2026-05-12-adafruit-seesaw-shields.md  2026-06-10-rasprover-hbridge-motors.md  2026-06-11-rasprover-gimbal-bus-servo.md
docs/superpowers/specs/: 2026-05-08-actuator-subsystem-design.md  2026-05-12-adafruit-seesaw-shields-design.md  2026-06-10-rasprover-hbridge-motors-design.md  2026-06-11-rasprover-gimbal-bus-servo-design.md
drivers/: CMakeLists.txt  Kconfig
scripts/: stack_usage.py
tests/rasprover/: test_ros_cdr.py  test_ros_topics.py
zephyr/: module.yml
