[project]
name = "zephyr-applications"
version = "1.0.0"
requires-python = ">=3.13,<4.0"

[dependency-groups]
dev = [
    "anytree>=2.13.0",
    "cbor>=1.0.0",
    "clang-format>=15.0.0",
    "colorama>=0.4.6",
    "coverage>=7.13.1",
    "esptool>=5.1.0",
    "gcovr>=6.0",
    "gitpython>=3.1.41",
    "graphviz>=0.21",
    "intelhex>=2.3.0",
    "jsonschema>=4.25.1",
    "junit2html>=31.0.5",
    "junitparser>=4.0.1",
    "lxml>=5.3.0",
    "natsort>=8.4.0",
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
    "packaging>=25.0",
    "patool>=2.0.0",
    "pillow>=10.3.0",
    "ply>=3.10",
    "poethepoet>=0.37.0",
    "pre-commit>=4.3.0",
    "psutil>=5.6.6",
    "pyelftools>=0.29",
    "pygithub>=2.8.1",
    "pykwalify>=1.8.0",
    "pylink-square>=1.7.0",
    "pyocd>=0.44.0",
    "pyserial>=3.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-env>=1.1.5",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "ruff==0.14.2",
    "semver>=3.0.4",
    "tabulate>=0.9.0",
    "tqdm>=4.67.3",
    "unidiff>=0.7.5",
    "west>=1.5.0",
    "windows-curses>=2.4.2 ; sys_platform == 'win32'",
    "yamllint>=1.37.1",
    "zephyr-kconfig>=0.2.0",
]

[tool.ruff]
line-length = 120
fix = true
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501", "T201"]

[tool.poe]
include = "poe.toml"
